--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ nav ul li a {
 }
 
 .register-button {
-    background-color: #007bff;
+    background-color: #698F44;
     color: #fff;
 }
 
@@ -91,7 +91,7 @@ nav ul li a {
 .cta-button {
     display: inline-block;
     padding: 15px 30px;
-    background-color: #007bff;
+    background-color: #698F44;
     color: #fff;
     border-radius: 5px;
     font-weight: 700;
