--- a/styles.css
+++ b/styles.css
@@ -159,7 +159,7 @@ nav ul li a.button-register:hover {
     display: inline-block; /* Inline-Block-Element */
     margin-bottom: 30px; /* Abstand unten */
     padding: 15px 30px; /* Innenabstand */
-    background-color: #698F44; /* Hintergrundfarbe */
+    background-color: #698F44 !important; /* Hintergrundfarbe */
     color: #ffffff; /* Textfarbe */
     border-radius: 5px; /* Abgerundete Ecken */
     font-weight: 700; /* Fettdruck */
