--- a/styles.css
+++ b/styles.css
@@ -842,7 +842,7 @@ ul li {
 }
 
 .process-icon {
-    background-color: #4a785e;
+    background-color: #60883A;
     border-radius: 50%;
     width: 60px;
     height: 60px;
